# progressist

./: .gitignore  .travis.yml  Makefile  README.md  conftest.py  demo.py  examples.py  setup.cfg  setup.py  tests.py
progressist/: __init__.py
progressist/tests/: test_progress.py
progresso/: __init__.py
tests/: test_progress.py
