[metadata]
name = progressist
version = 0.1.0
description = Minimalist and pythonic progress bar
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pyrates/progressist
keywords = progress-bar
license = WTFPL
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9


[options]
packages = find:
include_package_data = True
py_modules = progressist

[options.extras_require]
test =
    pytest==6.1.2
